done get_production

--- a/package.json
+++ b/package.json
@@ -2,10 +2,26 @@
   "name": "production_info_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node -r dotenv/config src/index.ts",
+    "dev": "npx nodemon"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.26.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "jimp": "^0.16.1",
+    "telegraf": "^4.7.0",
+    "telegraf-session-local": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.18",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
+  }
 }
