--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jimp": "^0.16.1",
+    "puppeteer": "^13.5.2",
     "telegraf": "^4.7.0",
     "telegraf-session-local": "^2.1.0"
   },
