--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-PORT=6000
 BOT_NAME=production_info_bot
-BOT_TOKEN=5262396157:AAErSP0tb3P8npBGaO39fPxD7uP9Bk8Oj9Q
-ESERVER_BASE_PAGE=http://172.27.70.7/eServer/PageLoader.asp?page=
-ESERVER_BASE_IMG=http://172.27.70.7/eServer/
+BOT_TOKEN=940385761:AAEN__IadeEzEK3sIGdBIsu3XHNrKymw0zY
+ESERVER_BASE_PAGE=http://172.27.70.9/MES/HMIWeb/UI/DisplayService1.0/view/displays/for_bot/
 SESSION_DB=sessions_db.json
