--- a/old/docker-compose.yml
+++ b/old/docker-compose.yml
@@ -4,8 +4,7 @@ services:
     build: .
     restart: unless-stopped
     image: production_info_bot
-    container_name: ProductionBot
-    env_file: ./.env
+    container_name: production_info_bot_co
     volumes:
-      - /etc/timezone:/etc/timezone
-      - /etc/localtime:/etc/localtime
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
