--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BOT_NAME=production_info_bot
 BOT_TOKEN=940385761:AAEN__IadeEzEK3sIGdBIsu3XHNrKymw0zY
 ESERVER_BASE_PAGE=http://10.3.28.14/screens/Abstract/For_bot/
+ESERVER_BASE_PAGE_OLD=http://10.3.28.14/MES/HMIWeb/UI/DisplayService1.0/view/displays/for_bot/
 SESSION_DB=sessions_db.json
